--- a/CSS/style.css
+++ b/CSS/style.css
@@ -105,7 +105,7 @@ textarea {
 .button {
     display: flex;
 }
-.button a {
+.button a, span {
     text-decoration: none;
     font-size: 16px;
     color: #56949f;
