--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,7 +92,7 @@ textarea {
 }
 .container {
     display: grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 250px 1fr;
     grid-template-rows: 125px 1fr;
     grid-template-areas:
         'h h'
@@ -102,7 +102,10 @@ textarea {
     height: 100vh;
     min-width: 650px
 }
-.create_box p {
+.create_box {
+    margin-top: 50px;
+}
+.create_box a {
     font-family: 'Nunito Sans', sans-serif;
     color: #56949f;
     margin: 50px;
@@ -127,9 +130,15 @@ textarea {
     grid-area: b;
     font-size: 30px;
 }
+#create_message {
+    margin-right: 0;
+}
 #content {
     padding: 50px;
     max-width: 60vw;
+}
+#note-area {
+    max-width: 70vw;
 }
 #save-n-cancel {
     display: flex;
@@ -140,13 +149,13 @@ textarea {
 #column {
     flex-direction: column;
 }
+#left_button {
+    padding-left: 0;
+}
 #add_symbol {
     padding-top: 50px;
     font-size: 25px;
 }
-/* #flex_start {
-    align-self: flex-start;
-} */
 #index_container {
     grid-template-columns: 100%;
     grid-template-areas:
@@ -184,22 +193,17 @@ textarea {
         padding-left: 1rem;
     }
     .sidebar {
-        align-self: flex-end;
+        align-self: flex-start;
     }
 }
 [contenteditable], h3 {
     font-size: 25px;
-    color: #575279;
+    color: #907aa9;
 }
-
 [contenteditable] > div, p {
     font-size: 18px;
-    color: #6e6a86;
-}
-/* [contenteditable] div:first-child, h3 {
     color: #575279;
-    font-size: 25px;
-} */
+}
 [contenteditable]:focus {
     outline: none;
 }
